--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,31 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet"> 
   <title>Caesar Cipher</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <div id="root">
-    <h1>Hello world!</h1>
+    <h1 class="titulo-principal">Saving Romeo & Juliet</h1>
+
+    <form class="form" action="">
+      <input class="form-input" type="text" data-form-input >
+      <button class="form-button" data-form-button > Codificar </button>
+      <button class="form-button" data-form-decode > Decifrar </button>
+    </form>
+
+
+    <ul class="content" data-cifra="">
+      
+    </ul>
   </div>
+
   <script src="index.js" type="module"></script>
 </body>
+
 </html>
