--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <div class="msg">
       <form class="form" action="">
         <input class="form-input" type="text" data-form-input required placeholder="Sua mensagem a ser cifrada ou decifrada aqui">
-        <button class="form-button" data-form-button > Codificar </button>
+        <button class="form-button" data-form-encode > Codificar </button>
         <button class="form-button" data-form-decode > Decifrar </button>
       </form>
   
@@ -26,12 +26,24 @@
       </ul>
     </div>
   </section>
-  
+
+  <div id="modal-desloc" class="modal-container"> 
+    <div class="modal"> 
+      <button class="fechar">x</button>
+      <h3 class="subtitulo-modal"> Chave secreta </h3>
+      <form>
+        <input type="text" class="input-modal" data-input-num >
+        <button class="form-button" data-form-offset > Começar </button>
+      </form>
+    </div>
+  </div>
+
   <footer>
     
-
   </footer>
+
   <script src="index.js" type="module"></script>
+
 </body>
 
 </html>
