--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <section>
     <div class="msg">
       <form class="form" action="">
-        <input class="form-input" type="text" data-form-input required placeholder="Sua mensagem a ser cifrada ou decifrada aqui">
+        <input class="form-input" type="text" data-form-input required placeholder="Sua mensagem aqui...">
         <button class="form-button" data-form-encode > Codificar </button>
         <button class="form-button" data-form-decode > Decifrar </button>
       </form>
@@ -30,10 +30,14 @@
   <div id="modal-desloc" class="modal-container"> 
     <div class="modal"> 
       <button class="fechar">x</button>
-      <h3 class="subtitulo-modal"> Chave secreta </h3>
+      <h3 class="subtitulo-modal"> chave secreta </h3>
       <form>
-        <input type="text" class="input-modal" data-input-num >
-        <button class="form-button" data-form-offset > Começar </button>
+        <p>
+          <input type="text" class="input-modal" data-input-num>
+        </p> 
+        <p> 
+          <button class="form-button" data-form-offset > Começar </button>
+        </p>
       </form>
     </div>
   </div>
